--- a/main.html
+++ b/main.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Class Selector Practice</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <p class="selector">This is Paragraph 1 and 3. It will have special styling.</p>
+    <p>This is Paragraph 2. It won't have special styling.</p>
+    <p class="selector">This is Paragraph 3. It will also have special styling.</p>
+    <p>This is Paragraph 4. It won't have special styling.</p>
 </body>
-
 </html>
